fix col collapse issues on 2ndary pages

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -42,7 +42,7 @@ b{
 
 .topnav {
     font-size: 16px;
-/*    background: none;*/
+    background-color: none;
     border: none;
 }
 
@@ -323,6 +323,20 @@ h4
     ul.banner-social-buttons > li:last-child {
         margin-bottom: 0;
     }
+}
+
+.content-section-d {
+    color: #f8f8f8;
+    background: url(../img/reflection2.jpg) no-repeat center center;
+    opacity: 80%;
+    background-size:cover;
+    padding-top: 30px;
+}
+
+.well3 {
+    background-color: rgba(20, 50, 70, 0.75);
+    margin: 50px;
+
 }
 
 footer {
